--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
     "type-check": "vue-tsc --build --force"
   },
   "dependencies": {
+    "@apollo/client": "^3.11.10",
+    "@vue/apollo-composable": "^4.2.1",
     "@vueuse/core": "^11.1.0",
+    "graphql": "^16.9.0",
+    "graphql-tag": "^2.12.6",
     "pinia": "^2.2.4",
     "vue": "^3.5.11",
     "vue-router": "^4.4.5"
