--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "run-p type-check \"build-only {@}\" --",
-    "preview": "vite preview",
-    "build-only": "vite build",
+    "build": "vite build",
+    "build:type-check": "run-p type-check \"build-only {@}\" --",
+    "preview": "vite preview --port 3000",
     "type-check": "vue-tsc --build --force"
   },
   "dependencies": {
