--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "vite build",
     "build:type-check": "run-p type-check \"build-only {@}\" --",
     "preview": "vite preview --port 3000",
-    "type-check": "vue-tsc --build --force"
+    "type-check": "vue-tsc --build --force",
+    "test": "vitest"
   },
   "dependencies": {
     "@apollo/client": "^3.11.10",
@@ -21,14 +22,17 @@
     "vue-router": "^4.4.5"
   },
   "devDependencies": {
+    "@testing-library/vue": "^8.1.0",
     "@tsconfig/node20": "^20.1.4",
     "@types/node": "^20.16.11",
     "@vitejs/plugin-vue": "^5.1.4",
     "@vue/tsconfig": "^0.5.1",
+    "happy-dom": "^15.11.7",
     "npm-run-all2": "^6.2.3",
     "typescript": "~5.5.4",
     "unplugin-vue-router": "^0.10.8",
     "vite": "^5.4.8",
+    "vitest": "^2.1.8",
     "vue-tsc": "^2.1.6"
   }
 }
