--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --port 3000",
     "build": "vite build",
     "build:type-check": "run-p type-check \"build-only {@}\" --",
     "preview": "vite preview --port 3000",
@@ -19,6 +19,7 @@
     "graphql-tag": "^2.12.6",
     "pinia": "^2.2.4",
     "vue": "^3.5.11",
+    "vue-i18n": "^10.0.5",
     "vue-router": "^4.4.5"
   },
   "devDependencies": {
